--- a/infra/pulumi/kube/helm/certmanager-certs/templates/cert.yaml
+++ b/infra/pulumi/kube/helm/certmanager-certs/templates/cert.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   secretName: wildcard-tls
   issuerRef:
-    name: letsencrypt-production
+    name: letsencrypt-staging
     kind: ClusterIssuer
   commonName: "{{ .Values.hostedZoneName }}"
   dnsNames:
