Updated backend appsettings to accomodate new values

--- a/src/backend/Titeenipeli/appsettings.json
+++ b/src/backend/Titeenipeli/appsettings.json
@@ -24,7 +24,7 @@
     "SpawnAreaRadius": 10,
     "PixelsPerMinutePerGuild": 20,
     "InitialPixelBucket": 100,
-    "MaximumPixelBucket": 500
+    "InitialPixelBucketSize": 500
   },
   "Bot": {
     "AuthorizationHeaderName": "X-BOT-KEY",
