--- a/src/backend/Titeenipeli/appsettings.Development.json
+++ b/src/backend/Titeenipeli/appsettings.Development.json
@@ -22,9 +22,9 @@
     "SpawnAreasPerGuild": 2,
     "SpawnAreaDistanceFromCenter": 10,
     "SpawnAreaRadius": 5,
-    "PixelsPerMinutePerGuild": 10,
-    "InitialPixelBucket": 10,
-    "MaximumPixelBucket": 100
+    "PixelsPerMinutePerGuild": 100,
+    "InitialPixelBucket": 100,
+    "InitialPixelBucketSize": 100
   },
   "Bot": {
     "AuthorizationHeaderName": "X-BOT-KEY",
