#470 Update used CTFs before trying to place it

--- a/src/backend/Titeenipeli/appsettings.Development.json
+++ b/src/backend/Titeenipeli/appsettings.Development.json
@@ -24,7 +24,7 @@
     "SpawnAreaRadius": 5,
     "PixelsPerMinutePerGuild": 10,
     "InitialPixelBucket": 10,
-    "MaximumPixelBucket": 100
+    "InitialPixelBucketSize": 100
   },
   "Bot": {
     "AuthorizationHeaderName": "X-BOT-KEY",
