#463: moved trafik resources to own helm and added ratelimit middleware

--- a/infra/pulumi/kube/helm/titeenipeli/files/appsettings.json
+++ b/infra/pulumi/kube/helm/titeenipeli/files/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning"
     }
   },
@@ -16,14 +16,14 @@
   "Game": {
     "FogOfWarDistance": 2,
     "MaxFogOfWarDistance": 5,
-    "Width": 100,
-    "Height": 100,
+    "Width": 201,
+    "Height": 201,
     "SpawnAreasPerGuild": 2,
     "SpawnAreaDistanceFromCenter": 40,
     "SpawnAreaRadius": 10,
-    "PixelsPerMinutePerGuild": 20,
-    "InitialPixelBucket": 100,
-    "MaximumPixelBucket": 500
+    "PixelsPerMinutePerGuild": 5000,
+    "InitialPixelBucket": 1000,
+    "InitialPixelBucketSize": 5000
   },
   "Bot": {
     "AuthorizationHeaderName": "X-BOT-KEY",
