--- a/infra/pulumi/kube/helm/titeenipeli/templates/postgres.yaml
+++ b/infra/pulumi/kube/helm/titeenipeli/templates/postgres.yaml
@@ -7,13 +7,14 @@ metadata:
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "-5"
 spec:
-  instances: 3
+  instances: 2
   imageName: ghcr.io/cloudnative-pg/postgresql:16
   primaryUpdateStrategy: unsupervised
   monitoring:
     enablePodMonitor: true
   storage:
     size: 10Gi
+    storageClass: ultra-disk-sc
   managed:
     roles:
     - name: app
