--- a/infra/pulumi/kube/helm/titeenipeli/templates/ingress.yaml
+++ b/infra/pulumi/kube/helm/titeenipeli/templates/ingress.yaml
@@ -36,6 +36,8 @@ spec:
   routes:
   - kind: Rule
     match: Host(`{{ .Values.gameUrl }}`) && PathPrefix(`/api`)
+    middlewares:
+    - name: ratelimit-player
     services:
     - name: {{ include "titeenipeli.backendName" . }}
       port: 8443
@@ -53,6 +55,8 @@ spec:
   routes:
   - kind: Rule
     match: Host(`{{ .Values.gameUrl }}`) && PathPrefix(`/Game.StateUpdate`)
+    middlewares:
+    - name: ratelimit-player
     services:
     - name: {{ include "titeenipeli.backendName" . }}
       port: 8443
