#485 Refactored other InMemory provider classes

--- a/src/backend/Titeenipeli/Titeenipeli.csproj
+++ b/src/backend/Titeenipeli/Titeenipeli.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Titeenipeli.Common\Titeenipeli.Common.csproj" />
     <ProjectReference Include="../Titeenipeli.Grpc/Titeenipeli.Grpc.csproj" />
-    <ProjectReference Include="..\Titeenipeli.InMemoryMapProvider\Titeenipeli.InMemoryMapProvider.csproj" />
+    <ProjectReference Include="..\Titeenipeli.InMemoryProvider\Titeenipeli.InMemoryProvider.csproj"/>
     <ProjectReference Include="..\Titeenipeli.SpecialEffects\Titeenipeli.SpecialEffects.csproj" />
   </ItemGroup>
   <ItemGroup>
