#529: Fix M-Files logo visibility

--- a/src/frontend/nginx.conf
+++ b/src/frontend/nginx.conf
@@ -16,6 +16,7 @@ http {
             application/javascript    js;
             text/css                  css;
             text/html                 html;
+            image/svg+xml             svg svgz;
         }
     }
 }
