--- a/infra/pulumi/kube/helm/titeenipeli/templates/postgres.yaml
+++ b/infra/pulumi/kube/helm/titeenipeli/templates/postgres.yaml
@@ -30,5 +30,25 @@ spec:
       "pgaudit.log_catalog": "off"
       "pgaudit.log_parameter": "on"
       "pgaudit.log_relation": "on"
+  backup:
+    barmanObjectStore:
+      destinationPath: {{ .Values.dbBackupContainer }}
+      azureCredentials:
+        inheritFromAzureAD: true
+  serviceAccountTemplate:
+    metadata:
+      annotations:
+        azure.workload.identity/client-id: {{ .Values.clientId }}
+      labels:
+        azure.workload.identity/use: "true"
 
+---
 
+apiVersion: postgresql.cnpg.io/v1
+kind: Backup
+metadata:
+  name: {{ include "titeenipeli.name" . }}-cluster
+  labels: {{- include "titeenipeli.labels" . | nindent 4 }}
+spec:
+  cluster:
+    name: {{ include "titeenipeli.name" . }}-cluster
