--- a/infra/pulumi/kube/helm/titeenipeli/templates/deployment.yaml
+++ b/infra/pulumi/kube/helm/titeenipeli/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "titeenipeli.frontendLabels" . | nindent 4 }}
 spec:
-  replicas: 1
+  replicas: 5
   selector:
     matchLabels:
       {{- include "titeenipeli.frontendSelectorLabels" . | nindent 6 }}
@@ -97,7 +97,7 @@ spec:
             - name: SQLCONNSTR_Database
               value: Server=$(DB_ADDRESS);Port=5432;Userid=$(DB_USERNAME);Timeout=15;Database=$(DB_USERNAME);Password=$(DB_PASS);Pooling=true;Minimum Pool Size=0;Maximum Pool Size=1000;
             - name: CORECLR_ENABLE_PROFILING
-              value: "1"
+              value: "0"
             - name: CORECLR_PROFILER
               value: "{BD1A650D-AC5D-4896-B64F-D6FA25D6B26A}"
             - name: CORECLR_PROFILER_PATH
@@ -105,12 +105,12 @@ spec:
             - name: LD_PRELOAD
               value: "/dotnet/Pyroscope.Linux.ApiWrapper.x64.so"
             - name: PYROSCOPE_PROFILING_ENABLED
-              value: "1"
+              value: "0"
             - name: PYROSCOPE_APPLICATION_NAME
               value: titeenipeli.dotnet.app
             - name: PYROSCOPE_SERVER_ADDRESS
               value: http://pyroscope.pyroscope.svc.cluster.local.:4040/
-          image: titeenipelitacr.azurecr.io/backend@sha256:b348f2d56a90d80d67cfaefd15ec6f881c0e12bf03b6e7075bc2a36c7b97f034
+          image: titeenipelitacr.azurecr.io/backend:latest
           name: backend
           volumeMounts:
             - name: certs
