--- a/infra/pulumi/kube/helm/titeenipeli/templates/ingress.yaml
+++ b/infra/pulumi/kube/helm/titeenipeli/templates/ingress.yaml
@@ -19,6 +19,8 @@ spec:
   routes:
   - kind: Rule
     match: Host(`{{ .Values.gameUrl }}`)
+    middlewares:
+    - name: ipwhitelist
     services:
     - name: {{ include "titeenipeli.frontendName" . }}
       port: 80
@@ -38,6 +40,7 @@ spec:
     match: Host(`{{ .Values.gameUrl }}`) && PathPrefix(`/api`)
     middlewares:
     - name: ratelimit-player
+    - name: ipwhitelist
     services:
     - name: {{ include "titeenipeli.backendName" . }}
       port: 8443
@@ -57,6 +60,7 @@ spec:
     match: Host(`{{ .Values.gameUrl }}`) && PathPrefix(`/Game.StateUpdate`)
     middlewares:
     - name: ratelimit-player
+    - name: ipwhitelist
     services:
     - name: {{ include "titeenipeli.backendName" . }}
       port: 8443
