--- a/infra/pulumi/kube/helm/titeenipeli/files/appsettings.json
+++ b/infra/pulumi/kube/helm/titeenipeli/files/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "OpenTelemetryEndpoint": "opentelemetry-collector.monitoring.svc:4318",
@@ -19,8 +19,8 @@
     "Width": 200,
     "Height": 200,
     "SpawnAreasPerGuild": 2,
-    "SpawnAreaDistanceFromCenter": 75,
-    "SpawnAreaRadius": 20,
+    "SpawnAreaDistanceFromCenter": 82,
+    "SpawnAreaRadius": 18,
     "PixelsPerMinutePerGuild": 25,
     "InitialPixelBucket": 20,
     "InitialPixelBucketSize": 20
