#539 Added background image drawing

--- a/src/backend/Titeenipeli.VideoGenerator/Titeenipeli.VideoGenerator.csproj
+++ b/src/backend/Titeenipeli.VideoGenerator/Titeenipeli.VideoGenerator.csproj
@@ -23,6 +23,9 @@
         <None Update="generate-video.sh">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="Background.webp">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
