#539 Added new settings

--- a/src/backend/Titeenipeli.VideoGenerator/appsettings.json
+++ b/src/backend/Titeenipeli.VideoGenerator/appsettings.json
@@ -7,10 +7,11 @@
     }
   },
   "Video": {
-    "Duration": "00:00:30",
+    "Duration": "00:00:10",
     "FrameRate": 60,
     "PixelSize": 8,
     "MapWidth": 200,
-    "MapHeight": 200
+    "MapHeight": 200,
+    "OutputFile": "out.mp4"
   }
 }
