updated tgToken to prod

--- a/infra/pulumi/kube/Pulumi.dev.yaml
+++ b/infra/pulumi/kube/Pulumi.dev.yaml
@@ -6,3 +6,5 @@ config:
     secure: v1:acKXqXxhvb0uVRxA:Zy9aQC3D3I4YMyqdE1B5KJPp8E/lCNa1KzZLuuYi0Hl/YWtCsGqO
   titeenipelikube:tgToken:
     secure: v1:6N9iz74Aa+fzuAP3:JA6xE2rLnQafv4LdF11L4cRE7Xkmid2538/In/k7w6GPEUW06mZbdz/dooUniMBkN6hQ6HQRwvIeXNRV5pU=
+  titeenipelikube:prodTgToken:
+    secure: v1:qzwWx9wlhCTqxDKc:qg0B8euuZtqYMJFPxMTDuszigodr3y5WY80e8by6re0xl5fNcmB14OCQKUhQ+KpFeXuHZp5NPy2nQXnzNZs=
