Small updates to logs and middlewares

--- a/infra/pulumi/foundation/helm/lgtm-distributed/values.yaml
+++ b/infra/pulumi/foundation/helm/lgtm-distributed/values.yaml
@@ -196,3 +196,22 @@ loki:
     enabled: true
     persistence:
       enabled: true
+  distributor:
+    replicas: 3
+    maxUnavailable: 2
+  indexGateway:
+    enabled: true
+    maxUnavailable: 1
+    replicas: 2
+  ingester:
+    replicas: 3
+    maxUnavailable: 2
+  querier:
+    replicas: 3
+    maxUnavailable: 2
+  queryFrontend:
+    replicas: 2
+    maxUnavailable: 1
+  queryScheduler:
+    enabled: true
+    replicas: 2
