--- a/infra/pulumi/kube/helm/titeenipeli/templates/ingress.yaml
+++ b/infra/pulumi/kube/helm/titeenipeli/templates/ingress.yaml
@@ -19,6 +19,9 @@ spec:
   routes:
   - kind: Rule
     match: Host(`{{ .Values.gameUrl }}`)
+    middlewares:
+    - name: ratelimit-player
+    - name: ipwhitelist
     services:
     - name: {{ include "titeenipeli.frontendName" . }}
       port: 80
@@ -38,20 +41,12 @@ spec:
     match: Host(`{{ .Values.gameUrl }}`) && PathPrefix(`/api`)
     middlewares:
     - name: ratelimit-player
+    - name: ipwhitelist
     services:
     - name: {{ include "titeenipeli.backendName" . }}
       port: 8443
       scheme: https
       serversTransport: "custom-ca-transport"
-#  - kind: Rule
-#    match: Host(`{{ .Values.gameUrl }}`) && PathPrefix(`/api/v1/state/powerups/activate`)
-#    middlewares:
-#    - name: ipwhitelist
-#    services:
-#    - name: {{ include "titeenipeli.backendName" . }}
-#      port: 8443
-#      scheme: https
-#      serversTransport: "custom-ca-transport"
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
@@ -64,6 +59,9 @@ spec:
   routes:
   - kind: Rule
     match: Host(`{{ .Values.gameUrl }}`) && PathPrefix(`/Game.StateUpdate`)
+    middlewares:
+    - name: ratelimit-player
+    - name: ipwhitelist
     services:
     - name: {{ include "titeenipeli.backendName" . }}
       port: 8443
